Worked on the 'my work' page, need to fix z-index of menu overlay. Possibly reconfigure 'my work' page.

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-color: rgb(8, 5, 5);
+$primary-color: rgb(124, 118, 118);
 $secondary-color: #2ad850;
 $show-home-image: true;
 $home-image: url(/dist/img/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg);
